--- a/toc.html
+++ b/toc.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./bookmark-ui.css">
-  
-  <title>Document</title>
-</head>
-<body>
-  <button id="mode"></button>
-  <textarea name="" id="" cols="30" rows="10">
-    f2: 핀 모드 토글
-    f3: 순차적으로 이동하기
-  </textarea>
-  <input type="text" id="tt">
-  <ul>
-  </ul>
-  <script src="./script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./bookmark-ui.css" />
+
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Saved DOM Positions</h1>
+    <ul id="domList"></ul>
+    <script src="popup.js"></script>
+  </body>
 </html>
